# vscode

./: .editorconfig  .envrc  .gitignore  .gitmodules  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .prettierignore  .prettierrc  .release-sync-state.yaml  .shellcheckrc  .shipit.toml  .vscodeignore  .yamllint  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.lex  README.md  UNRELEASED.md  agent-start  claude-start  deps.json  eslint.config.mjs  language-configuration.json  lefthook.yml  package-lock.json  package.json  pixi.toml  tsconfig.json
.claude/: IMPORTANT-RELEASE.md  settings.json
.claude/agents/: explorer.md  implementer.md  reviewer.md  shepherd.md
.codex/: config.toml  hooks.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/workflows/: checks.yml  copilot-review.yml  dependabot-auto-merge.yml  on-upstream-released.yml  release.yml  shipit-artifact-cascade.yml  shipit-release.yml  test.yml
.husky/: pre-commit
.release/: .editorconfig  .gitignore  .markdownlint.json  .markdownlintignore  .prettierignore  .release-sync-source  .shellcheckrc  .yamllint  ORIENTATION.md  lefthook.yml
.release/.claude/: settings.json
.release/.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.release/CHANGELOG/: README.txt
.release/lib/release_core/: hatch_build.py  pyproject.toml
.release/lib/release_core/release_core/: __init__.py  cli.py  cli_entry.py  entrypoints.py  gh.py  manifest.py  proc.py  sync.py  version.py  yamlio.py
.release/lib/release_core/release_core/cli/: __init__.py  _helpers.py  ci.py  pr.py  toplevel.py
.release/lib/release_core/release_core/cli/admin/: __init__.py  inbox.py  policy.py  release_cmds.py  repos.py  secrets.py
.release/lib/release_core/release_core/prstate/: __init__.py  breakers.py  comments.py  fetch.py  state.py
.release/lib/release_core/release_core/prstate/cli/: __init__.py
.release/lib/release_core/release_core/verbs/: __init__.py  apply_ruleset.py  audit_portfolio.py  audit_repo.py  audit_smoke_test.py  changelog.py  detect_kind.py  done_check.py  enable_dependabot_security.py  gh_release_issue.py  init.py  install_release_secrets.py  install_release_token.py  list_repo_pr.py  list_repo_scripts.py  managed_repos.py  release_advance_major.py  release_beta_list.py  release_cut.py  release_drift_check.py  release_inbox.py  release_lex.py  release_notify_source.py  release_sync.py  release_verify_fleet.py  selfcheck.py  semver.py  sweep_github_policy.py
.release/lib/release_core/tests/: conftest.py  test_core_apply_ruleset.py  test_core_audit_portfolio.py  test_core_audit_repo.py  test_core_audit_smoke_test.py  test_core_changelog.py  test_core_cli.py  test_core_cli_admin_fleet.py  test_core_cli_admin_onboard.py  test_core_cli_entry.py  test_core_cli_helpers.py  test_core_cli_toplevel.py  test_core_cli_tree.py  test_core_done_check.py  test_core_enable_dependabot_security.py  test_core_entrypoints.py  test_core_gh.py  test_core_gh_release_issue.py  test_core_init.py  test_core_install_release_secrets.py  test_core_install_release_token.py  test_core_list_repo_pr.py  test_core_list_repo_scripts.py  test_core_managed_repos.py  test_core_manifest.py  test_core_proc.py  test_core_release_advance_major.py  test_core_release_beta_list.py  test_core_release_cut.py  test_core_release_drift_check.py  test_core_release_inbox.py  test_core_release_lex.py  test_core_release_notify_source.py  test_core_release_sync_verb.py  test_core_release_verify_fleet.py  test_core_selfcheck.py  test_core_semver.py  test_core_sweep_github_policy.py  test_core_sync.py  test_core_version.py  (+9 more)
.release/lib/release_core/tests/prstate_fixtures/: blocked_checks_failing.json  blocked_merge_conflict.json  copilot_changes_requested.json  copilot_clean_gemini_clean.json  copilot_done_all_resolved.json  copilot_never_requested.json  copilot_stale_needs_rerequest.json  copilot_stale_review.json  gemini_eyes_copilot_requested.json  live_addressing_pr342.json  live_ready_pr342.json  ready_checks_green.json  reviewed_mergeable_unknown.json  validating_checks_pending.json
.release/lib/release_gh/: pyproject.toml
.release/lib/release_gh/release_gh/: __init__.py  breakers.py  fetch.py  ghapi.py  gitstat.py  model.py  reviewers.py  state.py
.release/lib/release_gh/release_gh/cli/: __init__.py  task_status.py
.shipit-skills/grill-me-with-docs/: CONTEXT-FORMAT.md
CHANGELOG/: 0.10.9.md  0.11.0.md  0.11.1.md  0.11.2.md  0.11.3.md  README.txt  legacy.md  unreleased-artifact-deps-conda-direct.md  unreleased-migrate-to-fragment-dir.md  unreleased-pre-migration-unreleased.md  unreleased-prettier-format.md  unreleased-prettier-ignore-generated.md  unreleased-release-v3.md  unreleased-shipit-release-caller.md  unreleased-smart-paste.md  unreleased-smartpaste-unit-tests.md  unreleased-treesitter-init-coverage.md  unreleased-ws7-managed-sync.md
app-bin/: build-vsix.sh  build_extension.sh  ci-build-shared-hook.sh  download-embedded-grammars.sh  download-lexd-lsp.sh  fetch-embedded-grammars  gen-theme.py  open_dev_vscode.sh  pre-vsce-package-hook.sh  try-lex-extension.sh
icons/: lex-file-icon-theme.json
lib/: bats-harness.bash
resources/: lex.tmLanguage.json
scripts/: build-vsix.sh  build_extension.sh  build_vsix.sh  ci-build-shared.sh  create-release  download-embedded-grammars.sh  download-lex-lsp.sh  download-lexd-lsp.sh  download-tree-sitter.sh  gen-theme.py  open_dev_vscode.sh  pre-vsce-package.sh  setup-dev-env.sh  try-lex-extension-extensions.txt  try-lex-extension.sh
shared/: lex-deps.json  package-lock.json  package.json  tsconfig.json
shared/src/: constants.ts  (+2 more)
src/: adapter.ts  client.ts  commands.ts  config.ts  embedded.ts  injections.ts  instrumentation.ts  main.ts  pathCompletion.ts  preview.ts  smartPaste.ts  smartPasteCore.ts  theme-data.ts  theme.ts  tokenizers.ts  treesitter.ts  trustPrompt.ts  trustPromptFormat.ts
test/: lex_vscode_extension.bats  runCspellTests.ts  runTests.ts  runVsixSmoke.ts  run_suite.sh  shortUserDataDir.ts
(+177 files in other folders)
