[project]
name = "release-core"
version = "0.0.1"
description = "Shared stdlib-only primitives for release's Python verbs (proc/gh/cli/yaml/semver/manifest)"
requires-python = ">=3.11"
# INTENTIONALLY EMPTY and must stay so (Phase 0–1): this package runs in
# GitHub Actions and Claude Cloud, where only the stdlib + the `gh`/`yq` CLIs
# are guaranteed. A third-party runtime dep here breaks 3-env parity and the
# zero-install shim model. See docs/proposals/shell-to-python.md §dependency
# frontier. YAML goes through yamlio (shell out to `yq`), never PyYAML.
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["release_core"]
