[project]
name = "release-core"
version = "0.0.1"
description = "Shared stdlib-only primitives for release's Python verbs (proc/gh/cli/yaml/semver/manifest)"
requires-python = ">=3.11"
# INTENTIONALLY EMPTY and must stay so (Phase 0–1): this package runs in
# GitHub Actions and Claude Cloud, where only the stdlib + the `gh`/`yq` CLIs
# are guaranteed. A third-party runtime dep here breaks 3-env parity and the
# zero-install shim model. See docs/proposals/shell-to-python.md §dependency
# frontier. YAML goes through yamlio (shell out to `yq`), never PyYAML.
dependencies = []

# Console-scripts: each on-PATH command name (hyphenated, matching today's
# bin/<name> shims exactly) → its zero-arg wrapper in release_core.entrypoints.
# The set == exactly the bin/ shims that dispatch to release_core. Bash tools
# (fetch-deps, fetch-artifact, gh-*, clone-*, migrate-*) and the release_gh-
# backed gh-task-status are intentionally absent. hatchling installs these as
# console-scripts by default (no extra config needed).
# The top-level `release-core` CLI (release_core.cli_entry:main) — the `init`
# subcommand dispatcher (PoC §2) — is registered here alongside the per-verb
# scripts so `release-core init` lands on PATH from the same wheel install.
[project.scripts]
release-core = "release_core.cli_entry:main"
apply-ruleset = "release_core.entrypoints:apply_ruleset_main"
audit-portfolio = "release_core.entrypoints:audit_portfolio_main"
audit-repo = "release_core.entrypoints:audit_repo_main"
audit-smoke-test = "release_core.entrypoints:audit_smoke_test_main"
changelog = "release_core.entrypoints:changelog_main"
changelog-add = "release_core.entrypoints:changelog_add_main"
changelog-cut = "release_core.entrypoints:changelog_cut_main"
changelog-render = "release_core.entrypoints:changelog_render_main"
detect-kind = "release_core.entrypoints:detect_kind_main"
done-check = "release_core.entrypoints:done_check_main"
enable-dependabot-security = "release_core.entrypoints:enable_dependabot_security_main"
gh-release-issue = "release_core.entrypoints:gh_release_issue_main"
install-release-secrets = "release_core.entrypoints:install_release_secrets_main"
install-release-token = "release_core.entrypoints:install_release_token_main"
list-repo-pr = "release_core.entrypoints:list_repo_pr_main"
list-repo-scripts = "release_core.entrypoints:list_repo_scripts_main"
managed-repos = "release_core.entrypoints:managed_repos_main"
release-advance-major = "release_core.entrypoints:release_advance_major_main"
release-beta-list = "release_core.entrypoints:release_beta_list_main"
release-cut = "release_core.entrypoints:release_cut_main"
release-drift-check = "release_core.entrypoints:release_drift_check_main"
release-inbox = "release_core.entrypoints:release_inbox_main"
release-lex = "release_core.entrypoints:release_lex_main"
release-notify-source = "release_core.entrypoints:release_notify_source_main"
release-sync = "release_core.entrypoints:release_sync_main"
release-verify-fleet = "release_core.entrypoints:release_verify_fleet_main"
semver = "release_core.entrypoints:semver_main"
sweep-github-policy = "release_core.entrypoints:sweep_github_policy_main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["release_core"]
# Ship the config templates inside the wheel so `release-core init` is
# self-contained (no release clone needed). Staged at build time by the hook.
artifacts = ["release_core/_bundled_templates/**"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
