[project]
name = "release-core"
version = "0.0.1"
description = "Shared primitives + CLI for release's Python verbs (proc/gh/cli/yaml/semver/manifest)"
requires-python = ">=3.11"
# Third-party runtime deps ARE permitted (reversing the Phase 0–1 stdlib-only
# freeze). The boot resolver `install-release-core` no longer passes `--no-deps`,
# so pip resolves these from PyPI on every boot — and PyPI is reachable in all
# three envs (GitHub Actions / Claude Cloud / local) precisely because the wheel
# itself already arrives over that same network. Keep deps PURE-PYTHON, no native
# build step (click qualifies), so install stays a no-compile wheel pull. YAML
# still goes through yamlio (shell out to `yq`), never PyYAML — that's a `yq`-CLI
# contract, not a dependency-policy rule.
#   click — the CLI framework backing the `release-core <group> <command>` tree.
dependencies = ["click>=8,<9"]

# Console-scripts. The CLI cutover (#468, epic #461) retired the flat
# maintainer-only command names — every maintainer/fleet verb is now reachable
# ONLY through the hierarchical `release-core <group> <command>` tree (the map is
# `release-core --help`). What remains on PATH as a flat name is the SHORT LIST
# of CONSUMER-FACING aliases that a consumer's own committed config / docs may
# reference directly, plus the root `release-core` CLI itself:
#   release-core              — the CLI root (cli_entry:main); `release-core init`
#                               and every `<group> <command>` land from one wheel.
#   changelog (+add/cut/render) — consumer changelog tooling.
#   semver, detect-kind         — consumer-facing primitives.
#   release-sync, release-drift-check — the consumer sync/drift gate.
#   gh-task-status              — the PR state engine (folded in; release#459).
#   gh-release-issue            — the consumer escalation entry point.
# Bash tools (fetch-deps, fetch-artifact, gh-*, clone-*, migrate-*) are
# intentionally absent. hatchling installs these as console-scripts by default.
[project.scripts]
release-core = "release_core.cli_entry:main"
changelog = "release_core.entrypoints:changelog_main"
changelog-add = "release_core.entrypoints:changelog_add_main"
changelog-cut = "release_core.entrypoints:changelog_cut_main"
changelog-render = "release_core.entrypoints:changelog_render_main"
detect-kind = "release_core.entrypoints:detect_kind_main"
gh-release-issue = "release_core.entrypoints:gh_release_issue_main"
gh-task-status = "release_core.entrypoints:gh_task_status_main"
release-drift-check = "release_core.entrypoints:release_drift_check_main"
release-sync = "release_core.entrypoints:release_sync_main"
semver = "release_core.entrypoints:semver_main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["release_core"]
# Ship the config templates inside the wheel so `release-core init` is
# self-contained (no release clone needed). Staged at build time by the hook.
artifacts = ["release_core/_bundled_templates/**"]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
