[project]
name = "release-gh"
version = "0.0.1"
description = "Reviewer-agnostic GitHub PR state engine (stdlib + gh only)"
requires-python = ">=3.11"
# INTENTIONALLY EMPTY and must stay so: this package runs in GitHub Actions
# and Claude Cloud, where only the stdlib and the `gh` CLI are guaranteed.
# A third-party runtime dep here breaks 3-env parity. See the proposal §6.2.
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["release_gh"]
